<resources>
    <string name="app_name">MEEM</string>
    <string name="acra_crach_notice">MEEM has encountered a problem and needs to close.</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_note">Use of the MEEM App, and the firmware that came with MEEM Product, is governed by the terms of MEEM\'s End User License Agreement and Firmware License Agreement from time to time. Your use of the App and the MEEM Product constitutes your agreement to the terms of those agreements. The current terms of those agreements can be viewed from \"Setting/Legal\" on the MEEM App, or on the Meem website at www.meemmemory.com
</string>
    <string name="accept">Accept</string>
    <string name="Countdown_begins">Countdown begins</string>
    <string name="name">Name</string>
    <string name="countdown">Countdown</string>
    <string name="stop">Stop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_imgview_content_desc">ImageView</string>
    <string name="prompt_for_cable_connect_part1">"Connect"</string>
    <string name="prompt_for_cable_connect_part2">"cable"</string>
    <string name="prompt_cable_connected">"Connected."</string>
    <string name="autobackup_prompt">Auto Backup will be performed once the countdown is finished.\n\nFor information on backup options other than automatic press Stop and go to the Help section.</string>
    <string name="home">Home</string>
    <string name="summary">Your Data</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sync">Sync</string>
    <string name="archive">Archive</string>
    <string name="just_now">Just now</string>
    <string name="change_name">Change Name</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="restore">Restore</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="abort">Abort</string>
    <string name="upgrade">Upgrade</string>
    <string name="done">Done</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
    <string name="meemwebsite">MEEM Website</string>
    <string name="legal">Legal</string>
    <string name="about_meem">\"MEEM is a phone charger cable that automatically backs up the personal data on your phone to the cable itself every time you charge your phone. Meem works exclusively with the free MEEM App.\"</string>
    <string name="eula">EULA</string>
    <string name="firmware_licence">Firmware Licence</string>
    <string name="warranty">Warranty</string>
    <string name="no_fw_update">No firmware update available</string>
    <string name="congratulation">Congratulations</string>
    <string name="on_buying_your_meem">on buying your MEEM!</string>
    <string name="cable_setup">Cable Setup</string>
    <string name="pin_change">PIN Change</string>
    <string name="cableinfo">Cable Info</string>
    <string name="capacity">Capacity</string>
    <string name="available">Available</string>
    <string name="firmware">Firmware</string>
    <string name="firmware_update">Firmware update</string>
    <string name="cable_authentication">Cable authentication</string>
    <string name="model">Model</string>
    <string name="cablepin">Cable PIN</string>
    <string name="reset_cable">Reset Cable</string>
    <string name="reset">Reset</string>
    <string name="delete_backup_data">Delete backup data</string>
    <string name="appsounds">Sound</string>
    <string name="confirmnewpin">Confirm PIN</string>
    <string name="enterpin">Enter PIN</string>
    <string name="pin_setup_info">Create a 4-digit security PIN, to protect your MEEM and the data on it. Keep your PIN safe and confidential.</string>
    <string name="pin_auth_info">IMPORTANT: After 10 wrong PIN attempts MEEM will lock and the data on it will be inaccessible. In the event that this happens, contact hello@meemmemory.com.</string>
    <string name="new_firmware_update_is_ready_for_meem">New Firmware update is ready for meem</string>
    <string name="contacts">Contacts</string>
    <string name="calendar">Calendar</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="music">Music</string>
    <string name="documents">Documents</string>
    <string name="messages">Messages</string>
    <string name="total_size">Total size</string>
    <string name="off">OFF</string>
    <string name="ok">OK</string>
    <string name="please_select_any_items">Please Select any items</string>
    <string name="add_to_calender">Add to calendar</string>
    <string name="add_to_address_book">Add to address book</string>
    <string name="add_to_library">Add to library</string>
    <string name="are_u_sure_u_want_to_delete_item">Are you sure\n you want to delete this item?</string>
    <string name="saving">Saving...</string>
    <string name="deleting">Deleting...</string>
    <string name="upgrading">Upgrading...</string>
    <string name="confirming_data">Confirming data...</string>
    <string name="finalizing_backup">Finalizing backup...</string>
    <string name="finalizing_copy">Finalizing copy...</string>
    <string name="finalizing_restore">Finalizing restore...</string>
    <string name="aborting_backup">Aborting backup...</string>
    <string name="aborting_copy">Aborting copy...</string>
    <string name="aborting_restore">Aborting restore...</string>
    <string name="transferring_date">Transferring data...</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="firmware_update_sucess">Firmware Update Success</string>
    <string name="firmware_update_failed">Firmware Update Failed</string>
    <string name="no_longer_access">You can no longer access the data on this MEEM\n Please contact your vendor, or contact our website.</string>
    <string name="please_wait_initilizing_cable">Please wait, initializing cable...</string>
    <string name="no_enough_memory">There is no enough memory in the phone</string>
    <string name="operation_takes_longtime_wish_to_continue">This operation may take long time.\n Do you wish to continue?</string>
    <string name="firmware_update_required">A firmware upgrade is required for your MEEM cable to provide you with more enhanced user experience. The upgrade will take only a moment. When the upgrade is finished, MEEM cable will automatically reconnect.</string>
    <string name="connect_meem_cable">Connect MEEM cable</string>
    <string name="meem_connected">MEEM Connected</string>
    <string name="meem_cable_locked">MEEM cable locked</string>
    <string name="firmware_warning">Important: Make sure there\'s no disconnection or power interruption during firmware update</string>
    <string name="there_is_no_enough_memory_in_the_device_for_backup_operation">There is not enough memory in the MEEM for Backup operation.</string>
    <string name="there_is_no_enough_memory_in_the_device_for_copy_operation">There is not enough memory in the device for Copy operation.</string>
    <string name="there_is_no_enough_memory_in_the_device_for_restore_operation">There is not enough memory in the device for Copy operation.</string>
    <string name="no_disconnection_or_power_interruption_during_firmware_update">Important: Make sure there\'s no disconnection or power interruption during firmware update</string>
    <string name="no_updates_available">No updates available.</string>
    <string name="for_information_on_backup_options_other_than_automatic_press_stop_and_go_to_the_help_section">For information on backup options other than automatic press Stop and go to the Help section</string>
    <string name="reset_warning">This will delete all backup data in your cable. Are you absolutely sure you want to continue?</string>
    <string name="hr">hr</string>
    <string name="hrs">hrs</string>
    <string name="min">min</string>
    <string name="mins">mins</string>
    <string name="sec">sec</string>
    <string name="secs">secs</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="ago">ago</string>
    <string name="left">left</string>
    <string name="help0">What is MEEM</string>
    <string name="help1">My personal data on MEEM</string>
    <string name="help2">Understanding the App</string>
    <string name="help3">Is My MEEM backing up?</string>
    <string name="help4">Automatic backup</string>
    <string name="help5">Original device manual backup and restore</string>
    <string name="help6">Changing automatic sync settings</string>
    <string name="help7">Multiple devices</string>
    <string name="help8">Copy data from an additional device</string>
    <string name="help9">Transferring selected items between devices</string>
    <string name="help10">Summary</string>
    <string name="help11">Sharing saved items to other Apps</string>
    <string name="help12">Settings</string>
    <string name="help13">Diagnostics</string>
    <string name="help14">Contact Us</string>
    <string name="diagnostic_msg">This function enables you to send a diagnostics report for your device to MEEM if you are experiencing trouble with your MEEM cable and you have contacted us for support. No personal data will be sent to us, only technical data relating to your cables operations.\n \n When you press the diagnostic button a pre-addressed email will pop up containing the diagnostic files, which you can send to us.</string>
    <string name="diagnostic_button">Send diagnostic information</string>
    <string name="contactus_msg">Email to hello@meemmemory.com\n\nMEEM Memory Ltd.\n\n© 2016 MEEM Memory Ltd. All rights reserved.\n\nMEEM and MEEM logo are trademarks of MEEM Memory Ltd registered in EU, US and other countries.\n\nOther company and product names mentioned herein may be trademarks of their respective companies. Mention of third-party products is for informational purposes only and constitutes neither an endorsement nor a recommendation. MEEM assumes no responsibility with regard to the performance or use of these products. All understandings, agreements, or warranties, if any, take place directly between the vendors and the prospective users. Every effort has been made to ensure that the information in this manual is accurate. MEEM is not responsible for printing or clerical errors.</string>
    <string name="share_contacts">Share Contacts</string>
    <string name="share_calendar">Share Calendar</string>
    <string name="share_photos">Share Photos</string>
    <string name="share_videos">Share Videos</string>
    <string name="share_music">Share Music</string>
    <string name="share_documents">Share Documents</string>
    <string name="share_messages">Share Messages</string>
    <string name="delete_vault_warning">This will delete all data backed up in the cable. Are you sure?</string>
    <string name="progress_msg">please wait...</string>
    <string name="notification_message">It\'s  %1$d %2$s since your last backup</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="meem_mode_description">View/Copy backup data in MEEM to your desktop</string>
    <string name="pc_mode_description">MEEM will be able to connect with the PC to access the content</string>
    <string name="data_cable_mode_description">MEEM will act as a regular data cable.</string>
    <string name="visible_100">100% Visible</string>
    <string name="serianno">Serial No.</string>
</resources>