<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"/>

        <item
            android:id="@+id/details"
            android:title="@string/summary"
            android:visible="false"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:visible="false"/>
        <item
            android:id="@+id/legal"
            android:title="@string/home"
            android:visible="false"/>
        <item
            android:id="@+id/about"
            android:title="@string/about"/>
        <item
            android:id="@+id/help"
            android:title="@string/help"/>
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
