<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#000000"
              android:orientation="vertical">

    <com.meem.ui.utils.MeemTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/meemBlack83"
        android:padding="5dp"
        android:text="@string/about"
        android:textColor="@color/meemWhite"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/meemGray3"/>

    <com.meem.ui.utils.MeemTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/meemBlack87"
        android:padding="5dp"
        android:text="@string/about_meem"
        android:textColor="@color/meemGray4"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/meemGray3"/>

    <RelativeLayout
        android:id="@+id/meemWebsiteRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/meemBlack83"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.meem.ui.utils.MeemTextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/meemwebsite"
            android:textColor="@color/meemWhite"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_details_arrow"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/meemGray3"/>

    <RelativeLayout
        android:id="@+id/legalRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/meemBlack83"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.meem.ui.utils.MeemTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/legal"
            android:textColor="@color/meemWhite"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_details_arrow"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/meemGray3"/>
</LinearLayout>