<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.meem.androidapp.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <ImageView
                android:id="@+id/backButtonIV"
                android:layout_width="@dimen/home_back_width"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="onClickBackButton"
                android:src="@drawable/btn_back_gray"
                android:visibility="gone"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center">

                <com.meem.ui.utils.MeemTextView
                    android:id="@+id/layoutTitleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/meemWhite"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:visibility="visible"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center">


                <com.meem.ui.utils.MeemTextView
                    android:id="@+id/toolbarRightTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_2"
                    android:padding="@dimen/padding_1"
                    android:text="@string/edit"
                    android:visibility="gone"/>

                <com.meem.ui.utils.MeemTextView
                    android:id="@+id/toolbarSelectTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_2"
                    android:padding="@dimen/padding_1"
                    android:text="@string/select"
                    android:visibility="gone"/>


                <com.meem.ui.utils.MeemTextView
                    android:id="@+id/toolbarTVSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/toolbarRightTV"
                    android:layout_marginRight="@dimen/margin_2"
                    android:layout_toLeftOf="@+id/toolbarRightTV"
                    android:layout_toStartOf="@+id/toolbarRightTV"
                    android:padding="@dimen/padding_1"
                    android:text="@string/done"
                    android:visibility="gone"/>

                <ProgressBar
                    android:id="@+id/pBarPause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/toolbarRightTV"
                    android:layout_toLeftOf="@+id/toolbarRightTV"
                    android:layout_toStartOf="@+id/toolbarRightTV"
                    android:paddingBottom="@dimen/padding_2"
                    android:paddingTop="@dimen/padding_2"
                    android:text="@string/abort"
                    android:visibility="gone"/>

                <com.meem.ui.utils.MeemTextView
                    android:id="@+id/abort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/toolbarRightTV"
                    android:layout_marginRight="@dimen/padding_2"
                    android:layout_toLeftOf="@+id/toolbarRightTV"
                    android:layout_toStartOf="@+id/toolbarRightTV"
                    android:background="@drawable/selecterforview"
                    android:paddingBottom="@dimen/padding_1"
                    android:paddingRight="@dimen/padding_1"
                    android:paddingTop="@dimen/padding_1"
                    android:text="@string/stop"
                    android:visibility="gone"/>

                <com.meem.ui.utils.MeemTextView
                    android:id="@+id/backup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/toolbarRightTV"
                    android:layout_marginRight="@dimen/padding_2"
                    android:layout_toLeftOf="@+id/toolbarRightTV"
                    android:layout_toStartOf="@+id/toolbarRightTV"
                    android:background="@drawable/selecterforview"
                    android:paddingBottom="@dimen/padding_1"
                    android:paddingRight="@dimen/padding_1"
                    android:paddingTop="@dimen/padding_1"
                    android:text="Backup"
                    android:visibility="gone"/>

            </LinearLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main"/>

    <!--    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email" />-->

</android.support.design.widget.CoordinatorLayout>
